Added Spray features
Added spray offsets into settings page, spray tester inside of fantester page, added spraytoggle on status page to turn on/off spray independently of fan. Applies global offset to spray independent of fan

--- a/HTFanControl/html/fantester.html
+++ b/HTFanControl/html/fantester.html
@@ -97,7 +97,8 @@
 				<a class="nav-link active bg-dark" href="fantester">Fan Tester</a>
 			</li>
 		</ul>
-
+		<br \>
+		<b style="font-size:larger">Fan Tester</b>
 		<br \><br \>
 		<button onclick="fancmd('OFF')" class="btn btn-danger">OFF</button>
 		<br \><br \>
@@ -108,6 +109,22 @@
 		<button onclick="fancmd('MED')" class="btn btn-primary">MED</button>
 		<br \><br \>
 		<button onclick="fancmd('HIGH')" class="btn btn-primary">HIGH</button>
+
+		<br \><br \>
+		<b style="font-size:larger">Spray Tester</b>
+		<br \><br \>
+
+		<button onclick="fancmd('SPRAYOFF')" class="btn btn-danger">SPRAYOFF</button>
+		<br \><br \>
+		<button onclick="fancmd('SPRAYON')" class="btn btn-primary">SPRAYON</button>
+		<br \><br \>
+		<button onclick="fancmd('BURST')" class="btn btn-primary">BURST</button>
+		<br \><br \>
+		<button onclick="fancmd('SHORTBURST')" class="btn btn-primary">SHORTBURST</button>
+		<br \><br \>
+		<button onclick="fancmd('MEDBURST')" class="btn btn-primary">MEDBURST</button>
+		<br \><br \>
+		<button onclick="fancmd('LONGBURST')" class="btn btn-primary">LONGBURST</button>
 
 	</div>
 </body>
